# tanssi-shivarthu

./: Cargo.toml  README.md
custom-pallets/department-funding/src/: lib.rs  mock.rs  types.rs
custom-pallets/positive-externality/src/: lib.rs  mock.rs
custom-pallets/profile-validation/src/: mock.rs
custom-pallets/project-tips/src/: extras.rs  lib.rs  mock.rs  tests.rs  types.rs
custom-pallets/schelling-game-shared/src/: extras.rs  lib.rs  score_game.rs  share_link.rs  tests.rs  types.rs
custom-pallets/shared-storage/src/: extras.rs  lib.rs
custom-pallets/sortition-sum-game/src/: mock.rs
custom-pallets/spaces/src/: mock.rs
custom-pallets/support/src/: lib.rs
docs/: new_code.md
pallets/department-funding/department-funding-runtime-api/: Cargo.toml
pallets/positive-externality/positive-externality-runtime-api/: Cargo.toml
pallets/positive-externality/src/: lib.rs  types.rs
pallets/profile-validation/profile-validation-rpc/: Cargo.toml
pallets/profile-validation/profile-validation-runtime-api/: Cargo.toml
pallets/profile-validation/src/: lib.rs  tests.rs
pallets/project-tips/project-tips-runtime-api/: Cargo.toml
pallets/project-tips/src/: lib.rs  mock.rs  tests.rs
pallets/schelling-game-shared/src/: mock.rs
pallets/shared-storage/src/: lib.rs  mock.rs
pallets/sortition-sum-game/: Cargo.toml
pallets/sortition-sum-game/src/: lib.rs  mock.rs  types.rs
pallets/support/src/: lib.rs
traits/trait-schelling-game-shared/: Cargo.toml
traits/trait-shared-storage/: Cargo.toml
traits/trait-shared-storage/src/: lib.rs
(+6 files in other folders)
