[package]
name = "project-tips-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-api = { workspace = true }
frame-support = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"frame-support/std",
]